modules/ingress/traefik-base/resources/networkPolicies.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-traefik
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: traefik
      app.kubernetes.io/instance: traefik
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - port: 8080
          protocol: TCP
        - port: 8080
          protocol: UDP
        - port: 8443
          protocol: TCP
        - port: 8443
          protocol: UDP
    - from:
        - namespaceSelector: {}
  egress:
    - to:
        - namespaceSelector: {}
---
